--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /.idea/modules.xml
 /.idea/codeStyles/Project.xml
 /.idea/vcs.xml
+/out/production/Chapter1/Chapter1.class
+/Chapter1/Chapter1.iml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/uiDesigner.xml
